@@ -13,6 +13,7 @@ v8.0.27
 
 - WL#14689: Fallback conversion to str for types incompatible with MySQL
 - WL#14664: Allow SSPI Kerberos library usage with c-ext
+- BUG#33177337: Connection with chained SSL certs fails with ssl_verify_identity
 - BUG#28641350: mysqlx.result.Row objects cannot be printed directly
 
 v8.0.26
